# datahacks

./: .env  .env.example  .gitignore  Home.py  README.md  clean_data.py  dashboard.py  devpost_description.md  docker-compose.yml  load_data.py  pyproject.toml  requirements-docs.txt  requirements.txt  setup_db.py  streamlit_app.py
.streamlit/: config.toml
data/oceansites/: SOURCES.txt
data/processed/: calcofi_larvae_daily.csv  calcofi_zooplankton_daily.csv  chlorophyll_daily.csv  mooring_master.csv  nitrate_daily.csv  oxygen_daily.csv  ph_daily.csv  temp_salinity_daily.csv
docs/: api.rst  conf.py  index.rst  methodology.rst
notebooks/: cce_explore.py
pages/: 1_📊_Analytics.py  2_🤖_AI_Predictions.py  3_🧪_Analysis_Lab.py  4_📋_Data_Quality.py  5_🐟_Species_Validation.py  6_🦑_CalCOFI_Ecosystem.py
scripts/: build_processed_panel.py  download_oceansites_by_variable.py  fetch_cce_deployment_csv.py  generate_sample_data.py  process_mooring_daily.py  run_full_oceansites_pipeline.py
src/cce_hack/: __init__.py  acidification_co2sys.py  agent_tools.py  anomaly.py  anomaly_iso.py  claude_narrative.py  column_pick.py  config.py  cross_column.py  data.py  data_quality_viz.py  dimred_cluster.py  dynamic_insights.py  features.py  inaturalist.py  ingest_raw.py  judge_brief.py  key_findings.py  llm_providers.py  mission_alerts.py  mission_ui.py  ml_extras.py  model.py  ollama_agents.py  pipeline.py  plot_theme.py  risk_scores.py  sample_data.py  soft_sensor.py  streamlit_shell.py  temporal_ops.py  ui_advanced.py  viz_extras.py  wavelet_ops.py
(+9 files in other folders)
